# data_platform

./: .dockerignore  .editorconfig  .env.template  .gitignore  .tool-versions  README.md  alembic.ini  docker-compose.yml  first.py  mypy.ini  requirements.txt  setup.cnf  setup.py
.github/workflows/: build.yml  ci.yaml  deploy.yml  docker.yml  elixir-ci.yaml  elixir-deploy.yaml  glue-ci.yaml  glue-deploy.yaml  glue-python-ci.yaml  glue-python-deploy.yaml  python-ci.yml  report-coverage.yaml
admin/: .gitignore  README.md  mix.exs
admin/config/: config.exs  dev.exs  (+3 more)
app/: mix.exs
archive/: aws__s3__glue_jobs__test.py  data_platform__batch__cubic_qlik__process_new_table.py  data_platform__glue_jobs__cubic_ods__ingest_load.py  first.py
async/: process_loads.py
batch/: process_new_table.py
data_platform/: __init__.py
db/: README.md  __init__.py
docker/: Dockerfile.glue_2_0__local  Dockerfile.glue_3_0__local  Dockerfile.glue__local  Dockerfile.main
ex_cubic_ingestion/: .credo.exs  Dockerfile  README.md  mix.exs
ex_cubic_ods_ingestion/: .credo.exs  Dockerfile  README.md  mix.exs
migrations/: 20211123-1100-setup.sql  20211123-1200-create-table-recs.sql
py_cubic_ingestion/: .pylintrc  pyproject.toml
py_cubic_ingestion/lib/py_cubic_ingestion/: custom_udfs.py  ingest_incoming.py  job_helpers.py
py_cubic_ingestion/tests/: conftest.py  test_custom_udfs.py  test_job_helpers.py
py_cubic_ods_ingestion/: pyproject.toml
supervisor/: cubic_ods__process_incoming.py  cubic_ods__start_ingestion.py
temp/: temp.py
terraform/: README.md  data-platform.tf
(+238 files in other folders)
